Attempt fixing buggy sub-pixel gaps around title info backgrounds by tweaking position.

--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -1403,7 +1403,7 @@ body::before {
 
 .data.title {
 	position: absolute;
-	bottom: 0;
+	bottom: -.5px;
 	left: 0;
 	z-index: 9;
 	
